changes on hercules